fix for collapse buttons on Safari
- some UI tweaks
- initial work on more control buttons (not working yet)

--- a/resources/fonts/Cardo/Cardo.css
+++ b/resources/fonts/Cardo/Cardo.css
@@ -9,7 +9,7 @@
 @font-face {
     font-family: 'Cardo';
     src: URL('Cardo-Bold.ttf') format('truetype');
-    font-weight: bold;
+    font-weight: 700;
     font-style: normal;
 }
 
